Fix alignment and enlarge signup buttons

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ ul {
     flex: 1;
     display: flex;
     flex-direction: column; 
+    padding: 20px;
 }
 
 .top-sign-up-button {
@@ -57,8 +58,9 @@ ul {
     color: #F9FAF8;
     border: 0px;
     border-radius: 5px;
-    padding: 5px 30px;
+    padding: 10px 60px;
     margin-top: 10px;
+    font-size: 20px;
 }
 
 .img-placeholder {
@@ -71,7 +73,7 @@ ul {
 
 .placeholder-text {
     background-color: #6d747d;
-    padding: 100px 135px;
+    padding: 100px 150px;
 }
 
 .information {
@@ -185,7 +187,8 @@ ul {
     color: #F9FAF8;
     border-color: white;
     border-radius: 5px;
-    padding: 5px 30px;
+    padding: 10px 60px;
+    font-size: 20px;
 
 }
 
